--- a/style.scss
+++ b/style.scss
@@ -12,50 +12,133 @@ html,
 }
 
 .square {
-    height: 40rem;
-    width: 40rem;
+    height: 6rem;
+    width: 6rem;
     text-align: center;
+    position: relative;
 
     &:hover {
+        a {
+            display: inline;
+
+            &:nth-child(1) {
+                animation: .3s ease-out 0s icon;
+
+            }
+
+            &:nth-child(2) {
+                animation: .3s ease-out 0s iconTwo;
+            }
+
+            &:nth-child(3) {
+                animation: .3s ease-out 0s iconThree;
+            }
+            &:nth-child(4){
+            	animation: .3s ease-out 0s iconFour;
+            }
+
+        }
+
         &:before {
             display: block;
-            animation: .8s ease-out 0s 1 resize;
-            
+            animation: .3s ease-out 0s 1 resize;
+
         }
     }
 
     &:before {
-        height: 6rem;
-        width: 6rem;
+        height: 9rem;
+        width: 9rem;
         content: '';
-        display:none;
+        display: none;
         position: absolute;
         border: solid .1rem black;
         transform: rotate(50deg);
-        margin:{
-        	left:10rem;
-        	top:6rem;
+        z-index: -1;
+
+        margin: {
+            left: -1.4rem;
+            top: -1.4rem;
+        }
+    }
+
+    a {
+        display: none;
+        position: absolute;
+
+        &:nth-child(1) {
+            top: 0px;
+            left: 0px;
+        }
+
+        &:nth-child(2) {
+            top: 0px;
+            right: 0px;
+        }
+
+        &:nth-child(3) {
+            bottom: 0px;
+            left: 0px;
+        }
+
+        &:nth-child(4) {
+            bottom: 0px;
+            right: 0px;
         }
     }
 
     img {
         height: auto;
-        max-width: 2rem;
-        margin:4rem;
+        max-width: 1.5rem;
     }
 }
 
 @keyframes resize {
-    0% {transform: scale(0) rotate(50deg);}
+    0% {
+        transform: scale(0) rotate(50deg);
+    }
 
     100% {
         transform: scale(1) rotate(50deg);
     }
 }
-@keyframes icon{
-	0%{}
-	50%{}
-	100%{
 
-	}
-}
+    @keyframes icon {
+        0% {
+            transform: translate3d(-60px, -60px, 0);
+        }
+
+        100% {
+            transform: translate3d(0px, 0px, 0);
+        }
+    }
+
+    @keyframes iconTwo {
+        0% {
+            transform: translate3d(60px, -60px, 0);
+        }
+
+        100% {
+            transform: translate3d(0px, 0px, 0);
+        }
+    }
+
+    @keyframes iconThree {
+        0% {
+            transform: translate3d(-60px, 60px, 0);
+        }
+
+        100% {
+            transform: translate3d(0px, 0px, 0);
+        }
+    }
+
+    @keyframes iconFour {
+        0% {
+            transform: translate3d(60px, 60px, 0);
+        }
+
+        100% {
+            transform: translate3d(0px, 0px, 0);
+        }
+    }
