--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,10 @@ html,
 * {
     box-sizing: boder-box;
 }
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
 
 .container {
     display: flex;
@@ -17,7 +21,19 @@ html,
     text-align: center;
     position: relative;
 
+    h1 {
+        cursor: pointer;
+        text-transform:uppercase;
+        font-weight:200;
+        font-size:2rem;
+
+    }
+
     &:hover {
+        h1 {
+            display: none;
+        }
+
         a {
             display: inline;
 
@@ -33,8 +49,9 @@ html,
             &:nth-child(3) {
                 animation: .3s ease-out 0s iconThree;
             }
-            &:nth-child(4){
-            	animation: .3s ease-out 0s iconFour;
+
+            &:nth-child(4) {
+                animation: .3s ease-out 0s iconFour;
             }
 
         }
@@ -65,6 +82,7 @@ html,
     a {
         display: none;
         position: absolute;
+        cursor: pointer;
 
         &:nth-child(1) {
             top: 0px;
@@ -103,42 +121,42 @@ html,
     }
 }
 
-    @keyframes icon {
-        0% {
-            transform: translate3d(-60px, -60px, 0);
-        }
-
-        100% {
-            transform: translate3d(0px, 0px, 0);
-        }
+@keyframes icon {
+    0% {
+        transform: translate3d(-60px, -60px, 0);
     }
 
-    @keyframes iconTwo {
-        0% {
-            transform: translate3d(60px, -60px, 0);
-        }
+    100% {
+        transform: translate3d(0px, 0px, 0);
+    }
+}
 
-        100% {
-            transform: translate3d(0px, 0px, 0);
-        }
+@keyframes iconTwo {
+    0% {
+        transform: translate3d(60px, -60px, 0);
     }
 
-    @keyframes iconThree {
-        0% {
-            transform: translate3d(-60px, 60px, 0);
-        }
+    100% {
+        transform: translate3d(0px, 0px, 0);
+    }
+}
 
-        100% {
-            transform: translate3d(0px, 0px, 0);
-        }
+@keyframes iconThree {
+    0% {
+        transform: translate3d(-60px, 60px, 0);
     }
 
-    @keyframes iconFour {
-        0% {
-            transform: translate3d(60px, 60px, 0);
-        }
-
-        100% {
-            transform: translate3d(0px, 0px, 0);
-        }
+    100% {
+        transform: translate3d(0px, 0px, 0);
     }
+}
+
+@keyframes iconFour {
+    0% {
+        transform: translate3d(60px, 60px, 0);
+    }
+
+    100% {
+        transform: translate3d(0px, 0px, 0);
+    }
+}
