--- a/style.scss
+++ b/style.scss
@@ -2,10 +2,11 @@ html,
 * {
     box-sizing: boder-box;
 }
+
 body {
     font-family: 'Open Sans', sans-serif;
+    margin:0;
 }
-
 
 .container {
     display: flex;
@@ -15,7 +16,7 @@ body {
     height: 100vh;
 }
 
-.square {
+#square {
     height: 6rem;
     width: 6rem;
     text-align: center;
@@ -55,11 +56,9 @@ body {
             }
 
         }
-
         &:before {
             display: block;
             animation: .3s ease-out 0s 1 resize;
-
         }
     }
 
@@ -69,9 +68,10 @@ body {
         content: '';
         display: none;
         position: absolute;
-        border: solid .1rem black;
+        border: solid .01rem grey;
         transform: rotate(50deg);
         z-index: -1;
+        box-shadow: 5px 5px 5px #aaaaaa;
 
         margin: {
             left: -1.4rem;
@@ -109,6 +109,17 @@ body {
         height: auto;
         max-width: 1.5rem;
     }
+}
+.test{
+	transition: 0.5s;
+	right:0;
+	width:0%; 
+	height:100%;
+	overflow-x: hidden;
+	overflow: auto;
+	position: fixed;
+	background:pink;
+
 }
 
 @keyframes resize {
